--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
+	"elasticsearch": { "host": "127.0.0.1:9200", "log": "error" },
 	"GOOGLE_API_KEY": "",
 	"ELK_INDEX_NAME": "",
 	"LOCATIONS": [
-		{ "title": "", "gid": "" }
+		{ "title": "", "gid": "" },
 	]
 }
